force-app/main/default/objects/Cobranca__c/Cobranca__c.object-meta.xml
<CustomObject>
    <label>Conta a receber</label>
    <nameField>
        <label>Nome da Cobrança</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contas a receber</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>