force-app/main/default/objects/Cobranca__c/fields/AliquotaVendedor__c.field-meta.xml
<CustomField>
    <fullName>AliquotaVendedor__c</fullName>
    <formula>IF(
Pedido__r.aliquota_variavel_vendedor__c != 0,
Pedido__r.aliquota_variavel_vendedor__c,
IF(
TEXT(Pedido__r.Natureza_de_Opera_o__c) == &apos;LOCAÇÃO&apos;,
Pedido__r.Vendedor__r.Al_quota_Loca_o__c,
Pedido__r.Vendedor__r.aliquota__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alíquota Vendedor (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>