force-app/main/default/objects/Cobranca__c/fields/apk__c.field-meta.xml
<CustomField>
    <fullName>apk__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>apk</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>