force-app/main/default/objects/Cobranca__c/fields/Atraso__c.field-meta.xml
<CustomField>
    <fullName>Atraso__c</fullName>
    <formula>TODAY() - Vencimento__c</formula>
    <inlineHelpText>Indica o número de dias entre a data de vencimento e a data atual.</inlineHelpText>
    <label>Atraso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>