force-app/main/default/objects/Cobranca__c/fields/Cliente_Cobrado_Hoje__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Cobrado_Hoje__c</fullName>
    <formula>Conta__r.Cliente_Cobrado_Hoje__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente Cobrado Hoje</label>
    <type>Checkbox</type>
</CustomField>