force-app/main/default/objects/Cobranca__c/fields/ComissaoVendedor__c.field-meta.xml
<CustomField>
    <fullName>ComissaoVendedor__c</fullName>
    <formula>Valor_do_recebimento__c * AliquotaVendedor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comissão Vendedor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>