force-app/main/default/objects/Cobranca__c/fields/Data_de_previsao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_previsao__c</fullName>
    <label>Data de previsão</label>
    <type>Date</type>
</CustomField>