force-app/main/default/objects/Cobranca__c/fields/data_e_hora_vencimento_teste__c.field-meta.xml
<CustomField>
    <fullName>data_e_hora_vencimento_teste__c</fullName>
    <description>Campo usado no fluxo de notificação para testar o envio</description>
    <label>data e hora vencimento teste</label>
    <type>DateTime</type>
</CustomField>