force-app/main/default/objects/Cobranca__c/fields/Estado_de_cobran_a__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_cobran_a__c</fullName>
    <formula>Pedido__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado de cobrança</label>
    <type>Text</type>
</CustomField>