force-app/main/default/objects/Cobranca__c/fields/Multa_calculada__c.field-meta.xml
<CustomField>
    <fullName>Multa_calculada__c</fullName>
    <formula>IF(
    Atraso__c &gt; 0,
    ROUND(
        (Valor_do_recebimento__c - IF(ISBLANK(Valor_pago__c), 0, Valor_pago__c)) * 0.02,
        2
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>O campo &quot;Multa&quot; calcula 2% do saldo devedor (Valor do Recebimento - Valor Pago) quando há atraso no pagamento.</inlineHelpText>
    <label>Multa calculada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>