force-app/main/default/objects/Cobranca__c/fields/Nf_Cancelada__c.field-meta.xml
<CustomField>
    <fullName>Nf_Cancelada__c</fullName>
    <inlineHelpText>Stauts da nota fiscal no SAP</inlineHelpText>
    <label>Status da Nota Fiscal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ativa</fullName>
            </value>
            <value>
                <fullName>cancelado</fullName>
            </value>
            <value>
                <fullName>devolvido</fullName>
            </value>
            <value>
                <fullName>cancelada</fullName>
            </value>
            <value>
                <fullName>devolvida</fullName>
            </value>
            <value>
                <fullName>ativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>