force-app/main/default/objects/Cobranca__c/fields/numero_pedido__c.field-meta.xml
<CustomField>
    <fullName>numero_pedido__c</fullName>
    <formula>Pedido__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número do pedido</label>
    <type>Text</type>
</CustomField>