force-app/main/default/objects/Cobranca__c/fields/Parcela__c.field-meta.xml
<CustomField>
    <fullName>Parcela__c</fullName>
    <label>Parcela</label>
    <type>TextArea</type>
</CustomField>