force-app/main/default/objects/Cobranca__c/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(Tipo_do_titulo__c, &quot;Renegociado&quot;),
        Valor_a_pagar__c = 0
    ),
    &quot;Renegociado&quot;,
    IF(
        Valor_a_pagar__c = 0,
        &quot;Pago&quot;,
        IF(
            AND(
                Vencimento__c = TODAY(),
                Valor_a_pagar__c &gt; 0
            ),
            &quot;Vence hoje&quot;,
            IF(
                AND(
                    Vencimento__c &lt; TODAY(),
                    Valor_a_pagar__c &gt; 0
                ),
                &quot;Atrasado&quot;,
                &quot;Em aberto&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situação</label>
    <type>Text</type>
</CustomField>