force-app/main/default/objects/Cobranca__c/fields/Tipo_do_titulo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_do_titulo__c</fullName>
    <label>Tipo do título</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pedido</fullName>
            </value>
            <value>
                <fullName>Renegociado</fullName>
            </value>
            <value>
                <fullName>Renegociação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>