force-app/main/default/objects/Cobranca__c/fields/Titulo_de_renegociacao__c.field-meta.xml
<CustomField>
    <fullName>Titulo_de_renegociacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Título de renegociação</label>
    <referenceTo>Cobranca__c</referenceTo>
    <relationshipLabel>Contas a receber</relationshipLabel>
    <relationshipName>Contas_a_receber</relationshipName>
    <type>Lookup</type>
</CustomField>