force-app/main/default/objects/Cobranca__c/fields/Valor_do_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_recebimento__c</fullName>
    <label>Valor do recebimento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>