force-app/main/default/objects/Cobranca__c/fields/Valor_pago__c.field-meta.xml
<CustomField>
    <fullName>Valor_pago__c</fullName>
    <label>Valor pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>