force-app/main/default/objects/Cobranca__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Vencimento__c</columns>
    <columns>Titulo__c</columns>
    <columns>Atraso__c</columns>
    <columns>Departamento__c</columns>
    <columns>Valor_a_pagar__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Conta__c</field>
        <operation>notContain</operation>
        <value>ABC,HOSPCOM,HEALTH,GDB</value>
    </filters>
    <label>Tudo</label>
</ListView>