force-app/main/default/objects/Cobranca__c/listViews/Cobran_as_120_dias_vencer.listView-meta.xml
<ListView>
    <fullName>Cobran_as_120_dias_vencer</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Pedido__c</columns>
    <columns>Valor_pago__c</columns>
    <columns>Valor_a_pagar__c</columns>
    <columns>Juros__c</columns>
    <columns>Atraso__c</columns>
    <columns>Vencimento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Atraso__c</field>
        <operation>lessThan</operation>
        <value>-120</value>
    </filters>
    <label>À VENCER - Cobranças 120+ dias</label>
</ListView>