force-app/main/default/objects/Cobranca__c/listViews/Cobran_as_com_30_dias_vencer.listView-meta.xml
<ListView>
    <fullName>Cobran_as_com_30_dias_vencer</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Pedido__c</columns>
    <columns>Valor_pago__c</columns>
    <columns>Valor_a_pagar__c</columns>
    <columns>Juros__c</columns>
    <columns>Atraso__c</columns>
    <columns>Vencimento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Atraso__c</field>
        <operation>lessOrEqual</operation>
        <value>-16</value>
    </filters>
    <filters>
        <field>Atraso__c</field>
        <operation>greaterOrEqual</operation>
        <value>-30</value>
    </filters>
    <label>À VENCER - Cobranças com 16 a 30 dias</label>
</ListView>