force-app/main/default/objects/Cobranca__c/listViews/Cobran_as_com_mais_de_180_dias_de_atras.listView-meta.xml
<ListView>
    <fullName>Cobran_as_com_mais_de_180_dias_de_atras</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Pedido__c</columns>
    <columns>Valor_pago__c</columns>
    <columns>Valor_a_pagar__c</columns>
    <columns>Juros__c</columns>
    <columns>Atraso__c</columns>
    <columns>Vencimento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Atraso__c</field>
        <operation>lessOrEqual</operation>
        <value>-91</value>
    </filters>
    <filters>
        <field>Atraso__c</field>
        <operation>greaterThan</operation>
        <value>-121</value>
    </filters>
    <label>À VENCER - Cobranças com 91 a 120</label>
</ListView>