force-app/main/default/objects/Cobranca__c/listViews/Cobran_as_de_91_a_120_dias_de_atras.listView-meta.xml
<ListView>
    <fullName>Cobran_as_de_91_a_120_dias_de_atras</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Pedido__c</columns>
    <columns>Valor_pago__c</columns>
    <columns>Valor_a_pagar__c</columns>
    <columns>Juros__c</columns>
    <columns>Atraso__c</columns>
    <columns>Vencimento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Atraso__c</field>
        <operation>greaterThan</operation>
        <value>90</value>
    </filters>
    <filters>
        <field>Atraso__c</field>
        <operation>lessThan</operation>
        <value>120</value>
    </filters>
    <label>VENCIDA - Cobranças de 91 a 120 dias</label>
</ListView>