force-app/main/default/objects/Cobranca__c/listViews/Cobran_as_em_atraso.listView-meta.xml
<ListView>
    <fullName>Cobran_as_em_atraso</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Titulo__c</columns>
    <columns>Atraso__c</columns>
    <columns>Valor_do_recebimento__c</columns>
    <columns>Juros_calculado__c</columns>
    <columns>Multa_calculada__c</columns>
    <columns>Valor_a_pagar__c</columns>
    <columns>Vencimento__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Atraso__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Conta__c</field>
        <operation>notContain</operation>
        <value>HOSPCOM,GDB,ABC,HEALTH,TEAMED</value>
    </filters>
    <filters>
        <field>Conta__c</field>
        <operation>contains</operation>
        <value>HEALTHCARE</value>
    </filters>
    <label>Cobranças em atraso</label>
</ListView>