force-app/main/default/objects/Cobranca__c/listViews/Copy_of_VENCER_Cobran_as_com_1_a_7_dias.listView-meta.xml
<ListView>
    <fullName>Copy_of_VENCER_Cobran_as_com_1_a_7_dias</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Pedido__c</columns>
    <columns>Valor_pago__c</columns>
    <columns>Valor_a_pagar__c</columns>
    <columns>Juros__c</columns>
    <columns>Atraso__c</columns>
    <columns>Vencimento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Atraso__c</field>
        <operation>lessOrEqual</operation>
        <value>-8</value>
    </filters>
    <filters>
        <field>Atraso__c</field>
        <operation>greaterOrEqual</operation>
        <value>-15</value>
    </filters>
    <label>À VENCER - Cobranças com 8 a 15 dias</label>
</ListView>