force-app/main/default/objects/Cobranca__c/listViews/Copy_of_VENCIDA_Cobran_as_com_31_a_60_dias.listView-meta.xml
<ListView>
    <fullName>Copy_of_VENCIDA_Cobran_as_com_31_a_60_dias</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Pedido__c</columns>
    <columns>Valor_pago__c</columns>
    <columns>Valor_a_pagar__c</columns>
    <columns>Juros__c</columns>
    <columns>Atraso__c</columns>
    <columns>Vencimento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Atraso__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Atraso__c</field>
        <operation>lessThan</operation>
        <value>7</value>
    </filters>
    <label>VENCIDA - Cobranças 1 a 7 dias</label>
</ListView>